--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -129,4 +129,7 @@
     <string name="default_field_name">Описание</string>
     <string name="pref_sync_notification">Уведомление синхронизации</string>
     <string name="tap_to_measure">Нажмите на карту для выбора точек</string>
+    <string name="permissions">Разрешения</string>
+    <string name="requested_permissions">Приложению требуются некоторые разрешения для корректной работы: запись на устройство (для хранения данных), доступ
+        к местоположению и получение контактов (для создания и управления веб аккаунтами).</string>
 </resources>
