--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -40,8 +40,6 @@
     <string name="show_compass">ミニコンパスを表示する</string>
     <string name="map">地図</string>
     <string name="map_summary">地図設定</string>
-    <string name="ngw">NextGIS Web</string>
-    <string name="ngw_summary">NextGIS Web 設定</string>
     <string name="app_description">地理情報の収集とサーバーへの送信のためのモバイルGISアプリケーション。 NextGIS Mobileもまたトラック記録と位置情報をwebサーバに送信します。</string>
     <string name="credits_intro">クレジット</string>
     <string name="credits">本アプリケーションのいくつかのアイコンは <a href="http://icons8.com/android-icons">Icons8.com</a> から <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a> のライセンスで, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> and <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> から <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a> で使用しています。</string>
@@ -62,8 +60,6 @@
     <string name="pref_location_accuracy_gps">GPS</string>
     <string name="pref_location_accuracy_cell">ネットワーク</string>
     <string name="location">位置情報</string>
-    <string name="location_summary">歩行による位置とジオメトリ設定</string>
-    <string name="tracks_summary">トラック設定</string>
     <string name="track_start">新しいトラックを開始する</string>
     <string name="track_stop">トラックを停止する</string>
     <string name="tracks_reload">現在のトラックを再開して追記する</string>
@@ -126,4 +122,5 @@
     <string name="tap_to_measure">地図をタップしてポイントをチェックする</string>
     <string name="permissions">アクセス許可</string>
     <string name="requested_permissions">アプリケーションが正しく動作するために幾つかのアクセス許可が必要です。これには外部ストレージの書き込み(カードへのデータの保存のため)、位置情報サービスへのアクセスと連絡先の取得(webアカウントの作成と管理のため)も含まれています。</string>
+    <string name="ngw_summary"></string>
 </resources>
