--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -39,8 +39,6 @@
     <string name="show_compass">Показувати міні компас</string>
     <string name="map">Карта</string>
     <string name="map_summary">Налаштування карти</string>
-    <string name="ngw">NextGIS Web</string>
-    <string name="ngw_summary">NextGIS Web налаштування</string>
     <string name="app_description">Мобільний ГІС додаток для візуалізації та збору даних у польових умовах та відправки їх на сервер. NextGIS Mobile також записує путь та відправляє координати на сервер.</string>
     <string name="credits_intro">Ліцензії</string>
     <string name="credits">Деякі іконки використані в застосунку з <a href="http://icons8.com/android-icons">Icons8.com</a> з ліцензією <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> та <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> з ліцензією <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>
@@ -61,8 +59,6 @@
     <string name="pref_location_accuracy_gps">GPS</string>
     <string name="pref_location_accuracy_cell">Інщі мережі</string>
     <string name="location">Місцезнаходження</string>
-    <string name="location_summary">Налаштування місцезнаходження та введення геометрій обходом</string>
-    <string name="tracks_summary">Налаштування треків</string>
     <string name="track_start">Почати запис нового треку</string>
     <string name="track_stop">Завершити запис треку</string>
     <string name="tracks_reload">Перезапустіть запис для застосування змін</string>
@@ -126,4 +122,5 @@
     <string name="permissions">Разрешения</string>
     <string name="requested_permissions">Приложению требуются некоторые разрешения для корректной работы: запись на устройство (для хранения данных), доступ
         к местоположению и получение контактов (для создания и управления веб аккаунтами).</string>
+    <string name="ngw_summary"></string>
 </resources>
