--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -124,5 +124,17 @@
     <string name="pref_sync_notification">Zeige Sync-Benachrichtigung</string> 
     <string name="tap_to_measure">Klicke auf die Karte um Punkte zu setzen</string> 
     <string name="permissions">Berechtigungen</string> 
-    <string name="requested_permissions">Diese Anwendung benötigt einige Berechtigungen um gut funktionieren zu können. Die Berechtigungen beinhalten Schreibrechte für externe Speichermedien (z.B. um Daten auf die SD-Karte zu schreiben), Zugang zu Standortdaten und Zugriff auf Kontakte (um Internet-Accounts zu erstellen und zu verwalten)</string> 
+    <string name="requested_permissions">Diese Anwendung benötigt einige Berechtigungen um gut funktionieren zu können. Die Berechtigungen beinhalten Schreibrechte für externe Speichermedien (z.B. um Daten auf die SD-Karte zu schreiben), Zugang zu Standortdaten und Zugriff auf Kontakte (um Internet-Accounts zu erstellen und zu verwalten)</string>
+    <string name="action_support">Support</string>
+    <string name="app_support">Please write us with questions, bug-reports and new features suggestions. Commercial support is available.</string>
+    <string name="email">Email</string>
+    <string name="email_src">info@nextgis.com</string>
+    <string name="telegram">Telegram</string>
+    <string name="telegram_src">\@nextgis_support</string>
+    <string name="github">Github</string>
+    <string name="github_src">http://github.com/nextgis/android_gisapp/issues</string>
+    <string name="web">Website</string>
+    <string name="web_src">http://nextgis.com/nextgis-mobile</string>
+    <string name="not_installed">Application not installed</string>
+    <string name="action_help">Help</string>
 </resources>
