--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -127,4 +127,16 @@
     <string name="requested_permissions">आवेदन कुछ अनुमतियों को ठीक से काम करने की जरूरत है। यह बाह्य भंडारण के लिए लेखन भी शामिल है (कार्ड पर डेटा को बचाने के लिए),स्थान सेवाओं और हो रही संपर्कों को एक्सेस (बना सकते हैं और वेब खातों का प्रबंधन करने के लिए)
         .</string>
     <string name="track_restore">Restore current track after reboot</string>
+    <string name="action_support">Support</string>
+    <string name="app_support">Please write us with questions, bug-reports and new features suggestions. Commercial support is available.</string>
+    <string name="email">Email</string>
+    <string name="email_src">info@nextgis.com</string>
+    <string name="telegram">Telegram</string>
+    <string name="telegram_src">\@nextgis_support</string>
+    <string name="github">Github</string>
+    <string name="github_src">http://github.com/nextgis/android_gisapp/issues</string>
+    <string name="web">Website</string>
+    <string name="web_src">http://nextgis.com/nextgis-mobile</string>
+    <string name="not_installed">Application not installed</string>
+    <string name="action_help">Help</string>
 </resources>
