--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -138,5 +138,5 @@
     <string name="web">Website</string>
     <string name="web_src">http://nextgis.com/nextgis-mobile</string>
     <string name="not_installed">Application not installed</string>
-    <string name="action_help">Help</string>
+    <string name="action_help">Помощь</string>
 </resources>
