--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -136,4 +136,6 @@
     <string name="not_installed">Application not installed</string>
     <string name="action_help">Help</string>
     <string name="location_distance_to">Distance to (m)</string>
+    <string name="pref_ga">Собирать статистику</string>
+    <string name="pref_ga_sum">Отправлять анонимные данные Google Analytics для улучшения приложения</string>
 </resources>
