--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -43,7 +43,7 @@
     <string name="app_description">地理情報の収集とサーバーへの送信のためのモバイルGISアプリケーション。 NextGIS Mobileもまたトラック記録と位置情報をwebサーバに送信します。</string>
     <string name="credits_intro">クレジット</string>
     <string name="credits">本アプリケーションのいくつかのアイコンは <a href="http://icons8.com/android-icons">Icons8.com</a> から <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a> のライセンスで, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> and <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> から <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a> で使用しています。</string>
-    <string name="copyright"><![CDATA[Copyright © <a href=\"http://nextgis.com\">NextGIS</a>, 2012–2016]]></string>
+    <string name="copyright"><![CDATA[© <a href=\"http://nextgis.com\">NextGIS</a>, 2012–2016]]></string>
     <string name="contacts"><a href="http://nextgis.ru/en/contact/">Contact us</a></string>
     <string name="action_about">このアプリケーションについて</string>
     <string name="add_current_place">現在位置を追加</string>
