--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -142,6 +142,8 @@
     <string name="location_distance_to">Distance to (m)</string>
     <string name="pref_ga">Collect statistics</string>
     <string name="pref_ga_sum">Send anonymous Google Analytics data to improve app quality and stability</string>
-    <string name="new_update">Version %1$s found. Would you like to update?</string>
+    <string name="update_new">Version %1$s found. Would you like to update?</string>
     <string name="update_title">Update?</string>
+    <string name="update_check">Check updates</string>
+    <string name="update_no">No updates found</string>
 </resources>
