--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -142,6 +142,8 @@
     <string name="location_distance_to">Расстояние до (м)</string>
     <string name="pref_ga">Собирать статистику</string>
     <string name="pref_ga_sum">Отправлять анонимные данные Google Analytics для улучшения приложения</string>
-    <string name="new_update">Найдена версия %1$s. Вы хотите обновиться?</string>
+    <string name="update_new">Найдена версия %1$s. Вы хотите обновиться?</string>
     <string name="update_title">Обновить?</string>
+    <string name="update_check">Проверить обновления</string>
+    <string name="update_no">Обновлений не найдено</string>
 </resources>
