--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -143,4 +143,6 @@
     <string name="update_title">Обновить?</string>
     <string name="update_check">Проверить обновления</string>
     <string name="update_no">Обновлений не найдено</string>
+    <string name="intro1">Добро пожаловать в NextGIS Mobile!\n\nЭто приложение поможет вам:\n* Показывать карты из одного или нескольких слоёв\n* Загружать и создавать геоданные\n* Осуществлять полевой сбор данных\n* Записывать треки\nи многое другое!</string>
+    <string name="intro2">Войдите для эффективной работы, синхронизации и получения регулярных обновлений (необходима подписка). Вы можете войти позже через настройки.</string>
 </resources>
